Fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -63,14 +63,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 25vh;
+  height: calc(100vh / 6);
   font-size: 6.5vw;
   text-shadow: 3px 3px lightcoral;
 }
 
 .flex-container > .powers > div sup {
-  font-size: 55%;
-  margin: -2.5rem 0 0 0.2rem;
+  font-size: 45%;
+  margin: -1.75rem 0 0 0.1rem;
 }
 
 .flex-container > .powers > div::before {
